Sun Aug  4 21:08:29 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): performance implement by using
	  ALLOCA_N() to allocate tmp buffer.

Sun Aug  4 07:14:49 2013  Tanaka Akira  <akr@fsij.org>

	* README.EXT, README.EXT.ja: Mention rb_integer_pack and
	  rb_integer_unpack.

Sun Aug  4 01:54:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_TRUNC): New macro.
	  (bary_cmp): Use BARY_TRUNC.
	  (bary_mul_toom3): Ditto.
	  (bary_divmod): Ditto.
	  (abs2twocomp): Ditto.
	  (bigfixize): Ditto.
	  (rb_cstr_to_inum): Ditto.
	  (big2str_karatsuba): Ditto.
	  (bigdivrem): Ditto.

Sun Aug  4 00:57:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Don't allocate new temporary buffer
	  if the buffer is enough for current invocation.

Sun Aug  4 00:22:34 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary2bdigitdbl): New function.
	  (bdigitdbl2bary): Ditto.
	  (bary_mul_single): Use bdigitdbl2bary.
	  (power_cache_get_power): Ditto.
	  (bary_divmod): Use bary2bdigitdbl.
	  (big2str_orig): Ditto.
	  (bigdivrem): Ditto.

Sat Aug  3 22:47:11 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: The branch condition of selecting multiplication
	  algorighms should check smaller argument because Karatsuba and Toom3
	  is effective only if both arguments are big.
	  (bary_mul_toom3_branch): Compare the smaller argument to
	  TOOM3_MUL_DIGITS.
	  (bary_mul): Compare the smaller argument to KARATSUBA_MUL_DIGITS.

Sat Aug  3 22:23:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Receive the number to stringize as
	  BDIGIT array and size.
	  (big2str_karatsuba): Receive the number to stringize as BDIGIT array
	  and size.  Use an temporary array of BDIGIT.
	  (rb_big2str1): Follow the above change.

Sat Aug  3 13:30:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MAX_BASE36_POWER_TABLE_ENTRIES): Renamed from
	  MAX_BIG2STR_TABLE_ENTRIES.
	  (base36_power_cache): Renamed from big2str_power_cache.